--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 00:05:03 2018</p>
+         Last Run: Wed Jul 25 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>2</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>33</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>43</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>24</td>
+                        <td>27</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -62,19 +62,19 @@
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>50</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>36</td>
+                        <td>33</td>
                         <td>56</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>50</td>
+                        <td>35</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -205,7 +205,7 @@
                  "0",
                  "0",
                  "15",
-                 "36",
+                 "33",
                  "37"
                ]
              },
@@ -215,7 +215,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "42",
-                 "44",
+                 "43",
                  "47",
                  "56",
                  "67"
@@ -226,10 +226,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "33",
-                 "24",
-                 "50",
-                 "50",
+                 "36",
+                 "27",
+                 "52",
+                 "35",
                  "50"
                ]
              }
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 00:05:03 2018</p>
+         Last Run: Wed Jul 25 01:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -269,8 +269,8 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>6</td>
                         <td>45</td>
                         <td>4</td>
@@ -310,9 +310,9 @@
                         <td>0</td>
                         <td>30</td>
                         <td>7</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>N</td>
-                        <td>16</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
@@ -323,8 +323,8 @@
                         <td>28</td>
                         <td>6</td>
                         <td>13</td>
-                        <td>N</td>
-                        <td>15</td>
+                        <td>NNW</td>
+                        <td>16</td>
                      </tr>
                   </tbody>
                </table>
@@ -370,7 +370,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "21",
+                 "22",
                  "23",
                  "24",
                  "24",
@@ -383,7 +383,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "21",
+                 "22",
                  "23",
                  "24",
                  "24",
@@ -467,8 +467,8 @@
                  "13",
                  "18",
                  "16",
-                 "16",
-                 "15"
+                 "17",
+                 "16"
                ]
              }
            ]
@@ -479,6 +479,225 @@
                                    };
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator4").innerHTML=MyNewChart.generateLegend();
+               </script>
+         <hr style="border-width:5px ">
+      </div>
+      <div style="padding:10px;border: 1px none black">
+         <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
+         <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
+         Last Run: Wed Jul 25 01:05:03 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
+               <table class="table table-striped">
+                  <thead>
+                     <tr>
+                        <th>Forecast Time</th>
+                        <th>Summary</th>
+                        <th>Temperture (°C)</th>
+                        <th>Feels Like (°C)</th>
+                        <th>POP (%)</th>
+                        <th>Humidity (%)</th>
+                        <th>UV</th>
+                        <th>Wind (km/hr)</th>
+                        <th>Wind Dir.</th>
+                        <th>Cloud Cover (%)</th>
+                     </tr>
+                  </thead>
+                  <tbody>
+                     <tr>
+                        <td>06:00 PM</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>26</td>
+                        <td>26</td>
+                        <td>32</td>
+                        <td>38</td>
+                        <td>2</td>
+                        <td>19</td>
+                        <td>NE</td>
+                        <td>38</td>
+                     </tr>
+                     <tr>
+                        <td>07:00 PM</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>24</td>
+                        <td>24</td>
+                        <td>33</td>
+                        <td>41</td>
+                        <td>1</td>
+                        <td>19</td>
+                        <td>NNE</td>
+                        <td>45</td>
+                     </tr>
+                     <tr>
+                        <td>08:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>22</td>
+                        <td>22</td>
+                        <td>12</td>
+                        <td>47</td>
+                        <td>0</td>
+                        <td>19</td>
+                        <td>NNE</td>
+                        <td>51</td>
+                     </tr>
+                     <tr>
+                        <td>09:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>23</td>
+                        <td>54</td>
+                        <td>0</td>
+                        <td>18</td>
+                        <td>N</td>
+                        <td>53</td>
+                     </tr>
+                  </tbody>
+               </table>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator5"></canvas><p><small>Date/Time</small></p></div>
+               		<div class="col-xs-4" id="legend_chartHTMLReportGenerator5" style="padding-left:75px;padding-top:25px"></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+               <script>
+               Chart.types.Line.extend({
+         name: "LineAlt",
+         draw: function () {
+         Chart.types.Line.prototype.draw.apply(this, arguments);
+         var ctx = this.chart.ctx;
+         ctx.save();
+         ctx.textAlign = "center";
+         ctx.textBaseline = "bottom";
+         ctx.fillStyle = this.options.scaleFontColor;
+         this.scale.xScalePaddingLeft=100;
+         var x = this.scale.xScalePaddingLeft * 0.4;
+         var y = this.chart.height / 2;
+         ctx.translate(x, y);
+         ctx.rotate(-90 * Math.PI / 180);
+         ctx.fillText("Temp (C)", 0, 0);
+         ctx.restore();
+         }});
+                  var ctx = document.getElementById("chartHTMLReportGenerator5").getContext("2d");
+                  var data ={
+           "labels":[
+             "06:00 PM",
+             "07:00 PM",
+             "08:00 PM",
+             "09:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"apparentTemperature",
+               "strokeColor":"rgba(92,0,141,1)",
+               "pointColor":"rgba(92,0,141,1)",
+               "fillColor":"rgba(92,0,141,0)",
+               "data":[
+                 "26",
+                 "24",
+                 "22",
+                 "20"
+               ]
+             },
+             {
+               "label":"temperature",
+               "strokeColor":"rgba(252,49,18,1)",
+               "pointColor":"rgba(252,49,18,1)",
+               "fillColor":"rgba(252,49,18,0)",
+               "data":[
+                 "26",
+                 "24",
+                 "22",
+                 "20"
+               ]
+             }
+           ]
+         };
+                  var options = { responsive:true,
+                  				  multiTooltipTemplate: "<%=datasetLabel%> : <%= value %>",
+                    			      legendTemplate : '<% for (var i=0; i<datasets.length; i++) { %><div style=\"background-color:<%=datasets[i].fillColor%>;width:25px;height:25px;border-style:solid;border-color:<%=datasets[i].strokeColor%>;margin:5px\"><span style="color:rgba(0,0,0,0)">____</span><span><small><% if (datasets[i].label) { %><%= datasets[i].label %><% } %></small></span></div><% } %>'
+                                   };
+                  var MyNewChart = new Chart(ctx).LineAlt(data,options);
+                  document.getElementById("legend_chartHTMLReportGenerator5").innerHTML=MyNewChart.generateLegend();
+               </script>
+               </style>
+               <div class="container-fluid">
+               	<div class="row">
+               		<div class="col-xs-8" style="text-align:center"><canvas id="chartHTMLReportGenerator6"></canvas><p><small>Date/Time</small></p></div>
+               		<div class="col-xs-4" id="legend_chartHTMLReportGenerator6" style="padding-left:75px;padding-top:25px"></div>
+               	</div>
+               </div>
+               <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+               <script>
+               Chart.types.Bar.extend({
+         name: "BarAlt",
+         draw: function () {
+         Chart.types.Bar.prototype.draw.apply(this, arguments);
+         var ctx = this.chart.ctx;
+         ctx.save();
+         ctx.textAlign = "center";
+         ctx.textBaseline = "bottom";
+         ctx.fillStyle = this.options.scaleFontColor;
+         this.scale.xScalePaddingLeft=100;
+         var x = this.scale.xScalePaddingLeft * 0.4;
+         var y = this.chart.height / 2;
+         ctx.translate(x, y);
+         ctx.rotate(-90 * Math.PI / 180);
+         ctx.fillText("Percentage (%)", 0, 0);
+         ctx.restore();
+         }});
+                  var ctx = document.getElementById("chartHTMLReportGenerator6").getContext("2d");
+                  var data ={
+           "labels":[
+             "06:00 PM",
+             "07:00 PM",
+             "08:00 PM",
+             "09:00 PM"
+           ],
+           "datasets":[
+             {
+               "label":"precipProbability",
+               "strokeColor":"rgba(0,0,255,1)",
+               "fillColor":"rgba(0,0,255,0.5)",
+               "data":[
+                 "32",
+                 "33",
+                 "12",
+                 "23"
+               ]
+             },
+             {
+               "label":"humidity",
+               "strokeColor":"rgba(40,177,255,1)",
+               "fillColor":"rgba(40,177,255,0.5)",
+               "data":[
+                 "38",
+                 "41",
+                 "47",
+                 "54"
+               ]
+             },
+             {
+               "label":"cloudCover",
+               "strokeColor":"rgba(233,37,255,1)",
+               "fillColor":"rgba(233,37,255,0.5)",
+               "data":[
+                 "38",
+                 "45",
+                 "51",
+                 "53"
+               ]
+             }
+           ]
+         };
+                  var options = { responsive:true,
+                  				  multiTooltipTemplate: "<%=datasetLabel%> : <%= value %>",
+                    			      legendTemplate : '<% for (var i=0; i<datasets.length; i++) { %><div style=\"background-color:<%=datasets[i].fillColor%>;width:25px;height:25px;border-style:solid;border-color:<%=datasets[i].strokeColor%>;margin:5px\"><span style="color:rgba(0,0,0,0)">____</span><span><small><% if (datasets[i].label) { %><%= datasets[i].label %><% } %></small></span></div><% } %>'
+                                   };
+                  var MyNewChart = new Chart(ctx).BarAlt(data,options);
+                  document.getElementById("legend_chartHTMLReportGenerator6").innerHTML=MyNewChart.generateLegend();
                </script>
          <hr style="border-width:5px ">
       </div>
