--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 02:05:03 2018</p>
+         Last Run: Wed Jul 25 03:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -30,27 +30,27 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>0</td>
-                        <td>42</td>
-                        <td>2</td>
-                        <td>13</td>
-                        <td>ESE</td>
-                        <td>35</td>
-                     </tr>
-                     <tr>
-                        <td>07:00 PM</td>
                         <td>Clear</td>
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>44</td>
+                        <td>43</td>
+                        <td>2</td>
+                        <td>13</td>
+                        <td>ESE</td>
+                        <td>29</td>
+                     </tr>
+                     <tr>
+                        <td>07:00 PM</td>
+                        <td>Partly Cloudy</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>0</td>
+                        <td>45</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>28</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -62,15 +62,15 @@
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>52</td>
+                        <td>53</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>32</td>
-                        <td>56</td>
+                        <td>31</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
@@ -82,7 +82,7 @@
                         <td>16</td>
                         <td>16</td>
                         <td>37</td>
-                        <td>67</td>
+                        <td>68</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
@@ -205,7 +205,7 @@
                  "0",
                  "0",
                  "15",
-                 "32",
+                 "31",
                  "37"
                ]
              },
@@ -214,11 +214,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "42",
-                 "44",
+                 "43",
+                 "45",
                  "48",
-                 "56",
-                 "67"
+                 "57",
+                 "68"
                ]
              },
              {
@@ -226,9 +226,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "35",
-                 "28",
-                 "52",
+                 "29",
+                 "30",
+                 "53",
                  "35",
                  "50"
                ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 02:05:03 2018</p>
+         Last Run: Wed Jul 25 03:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -269,10 +269,10 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>1</td>
-                        <td>44</td>
+                        <td>45</td>
                         <td>4</td>
                         <td>10</td>
                         <td>NW</td>
@@ -284,7 +284,7 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>37</td>
                         <td>5</td>
                         <td>11</td>
                         <td>NNW</td>
@@ -308,7 +308,7 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>31</td>
                         <td>7</td>
                         <td>11</td>
                         <td>N</td>
@@ -317,10 +317,10 @@
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>30</td>
                         <td>6</td>
                         <td>13</td>
                         <td>N</td>
@@ -370,11 +370,11 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "21",
+                 "22",
                  "23",
                  "24",
                  "24",
-                 "24"
+                 "25"
                ]
              },
              {
@@ -383,11 +383,11 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "21",
+                 "22",
                  "23",
                  "24",
                  "24",
-                 "24"
+                 "25"
                ]
              }
            ]
@@ -452,11 +452,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
-                 "36",
+                 "45",
+                 "37",
                  "33",
-                 "30",
-                 "29"
+                 "31",
+                 "30"
                ]
              },
              {
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 02:05:03 2018</p>
+         Last Run: Wed Jul 25 03:05:03 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -510,10 +510,10 @@
                         <td>26</td>
                         <td>26</td>
                         <td>46</td>
-                        <td>38</td>
+                        <td>37</td>
                         <td>2</td>
-                        <td>19</td>
-                        <td>NE</td>
+                        <td>18</td>
+                        <td>ENE</td>
                         <td>50</td>
                      </tr>
                      <tr>
@@ -524,33 +524,33 @@
                         <td>46</td>
                         <td>42</td>
                         <td>1</td>
-                        <td>19</td>
+                        <td>18</td>
                         <td>NE</td>
                         <td>50</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>22</td>
-                        <td>22</td>
-                        <td>24</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>23</td>
                         <td>47</td>
                         <td>0</td>
-                        <td>19</td>
-                        <td>NNE</td>
-                        <td>52</td>
+                        <td>18</td>
+                        <td>NE</td>
+                        <td>46</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>24</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>23</td>
                         <td>56</td>
                         <td>0</td>
-                        <td>18</td>
-                        <td>N</td>
-                        <td>53</td>
+                        <td>16</td>
+                        <td>NNE</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -597,8 +597,8 @@
                "data":[
                  "26",
                  "24",
-                 "22",
-                 "20"
+                 "23",
+                 "21"
                ]
              },
              {
@@ -609,8 +609,8 @@
                "data":[
                  "26",
                  "24",
-                 "22",
-                 "20"
+                 "23",
+                 "21"
                ]
              }
            ]
@@ -664,8 +664,8 @@
                "data":[
                  "46",
                  "46",
-                 "24",
-                 "24"
+                 "23",
+                 "23"
                ]
              },
              {
@@ -673,7 +673,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "38",
+                 "37",
                  "42",
                  "47",
                  "56"
@@ -686,8 +686,8 @@
                "data":[
                  "50",
                  "50",
-                 "52",
-                 "53"
+                 "46",
+                 "50"
                ]
              }
            ]
