--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 04:05:03 2018</p>
+         Last Run: Wed Jul 25 05:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -30,15 +30,15 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
-                        <td>0</td>
+                        <td>1</td>
                         <td>44</td>
                         <td>2</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>29</td>
+                        <td>31</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>20</td>
                         <td>20</td>
                         <td>15</td>
-                        <td>48</td>
+                        <td>49</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>53</td>
+                        <td>54</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -74,14 +74,14 @@
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>35</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>37</td>
+                        <td>36</td>
                         <td>68</td>
                         <td>0</td>
                         <td>10</td>
@@ -202,11 +202,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
+                 "1",
                  "0",
                  "15",
                  "31",
-                 "37"
+                 "36"
                ]
              },
              {
@@ -216,7 +216,7 @@
                "data":[
                  "44",
                  "45",
-                 "48",
+                 "49",
                  "57",
                  "68"
                ]
@@ -226,10 +226,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "29",
+                 "31",
                  "30",
-                 "53",
-                 "35",
+                 "54",
+                 "38",
                  "50"
                ]
              }
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 04:05:03 2018</p>
+         Last Run: Wed Jul 25 05:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -276,7 +276,7 @@
                         <td>4</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>12</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -296,11 +296,11 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>32</td>
                         <td>6</td>
                         <td>11</td>
                         <td>NNW</td>
-                        <td>15</td>
+                        <td>14</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -322,7 +322,7 @@
                         <td>0</td>
                         <td>29</td>
                         <td>6</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>N</td>
                         <td>15</td>
                      </tr>
@@ -454,7 +454,7 @@
                "data":[
                  "44",
                  "36",
-                 "33",
+                 "32",
                  "30",
                  "29"
                ]
@@ -464,9 +464,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "12",
+                 "11",
                  "15",
-                 "15",
+                 "14",
                  "16",
                  "15"
                ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 25 04:05:03 2018</p>
+         Last Run: Wed Jul 25 05:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MSB Fusion - CSC Field 3</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 31, 2018 -  6:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -519,10 +519,10 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
-                        <td>24</td>
-                        <td>24</td>
+                        <td>25</td>
+                        <td>25</td>
                         <td>46</td>
-                        <td>42</td>
+                        <td>41</td>
                         <td>1</td>
                         <td>18</td>
                         <td>NE</td>
@@ -550,7 +550,7 @@
                         <td>0</td>
                         <td>16</td>
                         <td>NNE</td>
-                        <td>50</td>
+                        <td>49</td>
                      </tr>
                   </tbody>
                </table>
@@ -596,7 +596,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "26",
-                 "24",
+                 "25",
                  "23",
                  "21"
                ]
@@ -608,7 +608,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "26",
-                 "24",
+                 "25",
                  "23",
                  "21"
                ]
@@ -674,7 +674,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "37",
-                 "42",
+                 "41",
                  "47",
                  "56"
                ]
@@ -687,7 +687,7 @@
                  "50",
                  "50",
                  "46",
-                 "50"
+                 "49"
                ]
              }
            ]
